--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer th:fragment="footer" class="text-center text-lg-start bg-white text-muted">
+<footer th:fragment="footer" class=" container text-center text-lg-start bg-white text-muted">
     <!-- Section: Social media -->
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
         <!-- Left -->
@@ -119,4 +119,3 @@
     </div>
     <!-- Copyright -->
 </footer>
-<!-- Footer -->
