--- a/src/main/resources/templates/AuctionView.html
+++ b/src/main/resources/templates/AuctionView.html
@@ -64,8 +64,9 @@ var x = setInterval(function() {
 }, 1000);
 </script>
 <body>
+<div  th:insert="fragments/menu :: menu"> </div>
 
-<div  th:insert="Header.html"> </div>
+<!--<div  th:insert="Header.html"> </div>-->
 
 
 
