--- a/src/main/resources/templates/fragments/js.html
+++ b/src/main/resources/templates/fragments/js.html
@@ -58,8 +58,8 @@
     <!-- dropdown nav -->
 
     <!-- //dropdown nav -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
+    <script src="/js/move-top.js"></script>
+    <script src="/js/easing.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
@@ -89,6 +89,6 @@
     </script>
     <!--// end-smoth-scrolling -->
 
-    <script src="js/bootstrap.js"></script>
+    <script src="/js/bootstrap.js"></script>
     <!-- js file -->
 </div>
