--- a/src/main/resources/templates/client/auction-details.html
+++ b/src/main/resources/templates/client/auction-details.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:insert="fragments/head :: head"></head>
-
+<head th:replace="fragments/head :: head"></head>
 <body>
 
 <div  th:insert="fragments/menu :: menu"> </div>
 
-<div  th:insert="fragments/auction-form :: auction-form"> </div>
+<div  th:insert="fragments/auction-details-form :: auction-details-form"> </div>
 
 
-<!-- about -->
+
 <div th:replace="fragments/footer :: footer"></div>
 
-<div th:insert="fragments/js :: js"></div>
+<div th:replace="fragments/js :: js"></div>
 </body>
 
 </html>
