--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -14,27 +14,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             window.scrollTo(0, 1);
         }
     </script>
+    <!-- Default-JavaScript --><script th:src="@{../js/jquery-2.2.3.js}"></script>
 
+    <link rel="stylesheet" th:href="@{/css/styleView.css}"		 type="text/css" media="all">
+    <link rel="stylesheet" th:href="@{/css/flexslider.css}" type="text/css" media="all">
     <link  th:href="@{/images/fav.ico}" rel="shortcut icon" type="image/png"/>
-    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-    <link rel="stylesheet" href="css/shop.css" type="text/css" />
-    <link rel="stylesheet" href="css/owl.carousel.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/owl.theme.css" type="text/css" media="all">
-    <link href="css/style.css" rel='stylesheet' type='text/css' />
-    <link th:href="@{css/fontawesome-all.css}" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800"
+    <link th:href="@{/css/bootstrap.css}" rel='stylesheet' type='text/css' />
+    <link rel="stylesheet" th:href="@{/css/shop.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/owl.carousel.css}" type="text/css" media="all">
+    <link rel="stylesheet" th:href="@{/css/owl.theme.css}" type="text/css" media="all">
+    <link th:href="@{/css/style.css}" rel='stylesheet' type='text/css' />
+    <link th:href="@{/css/fontawesome-all.css}" rel="stylesheet">
+    <link th:href="@{//fonts.googleapis.com/css?family=Inconsolata:400,700}" rel="stylesheet">
+    <link th:href="@{//fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800}"
           rel="stylesheet">
-    <script src="required/jquery.min.js"></script>
+    <script src="/required/jquery.min.js"></script>
     <link rel="shortcut icon" href="Images/fav.ico" type="image/png">
-    <script src="required/bootstrap.min.js"></script>
-    <script src="required/notify.min.js"></script>
-    <link rel="stylesheet" href="required/bootstrap.min.css">
+    <script  src="/required/bootstrap.min.js"></script>
+    <script  src="/required/notify.min.js"></script>
+    <link rel="stylesheet" th:href="@{/required/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/postedbid.css}">
+    <link rel="stylesheet" th:href="@{/css/font-awesome-animation.css}">
+    <link rel="stylesheet" th:href="@{/css/font-awesome.css}" 		 type="text/css" media="all">
+    <link rel="stylesheet" th:href="@{/fonts/fontawesome-webfont.ttf}" type="text/css" media="all">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-
 </head>
