--- a/src/main/resources/templates/client/auctions-page.html
+++ b/src/main/resources/templates/client/auctions-page.html
@@ -80,7 +80,6 @@
                                     <i class="fas fa-eye"></i>
                                 </button>
 
-
                             </form>
 
                         </div>
@@ -102,7 +101,7 @@
         <div class="product-googles-info googles">
             <div class="men-pro-item">
                 <div class="men-thumb-item">
-                    <img th:attr="src=@{|/images/${auction.image}|}"/>
+                    <img th:src="@{'/images/' + ${auction.image}}"/>
                     <!-- 									<img th:src="@{/image/Book.png}" class="img-thumbnail" alt=""> -->
 
                     <div class="men-cart-pro">
@@ -122,6 +121,10 @@
                                 <div class="grid-price mt-2">
                                     <span class="money " th:text="${auction.startPrice}"></span>
                                 </div>
+                                <form th:action="@{/auctions/{id}(id=*{auction.id})}" th:method="delete">
+                                    <input class="btn btn-default btn-xs" type="submit" value="delete" />
+                                </form>
+
                             </div>
                             <ul class="stars">
                                 <li>
