--- a/src/main/resources/templates/client/auctions-page.html
+++ b/src/main/resources/templates/client/auctions-page.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org">
 
 <head th:replace="fragments/head :: head"></head>
 <body>
@@ -121,8 +121,8 @@
                                 <div class="grid-price mt-2">
                                     <span class="money " th:text="${auction.startPrice}"></span>
                                 </div>
-                                <form sec:authorize="hasAuthority('admin')"th:action="@{/auctions/{id}(id=*{auction.id})}" th:method="delete">
-                                    <input class="btn btn-default btn-xs" type="submit" value="delete" />
+                                <form   sec:authorize="hasAuthority('admin')"th:action="@{/auctions/{id}(id=*{auction.id})}" th:method="delete">
+                                    <input class="btn btn-danger" type="submit" value="Delete" />
                                 </form>
 
                             </div>
@@ -180,6 +180,8 @@
 <div th:replace="fragments/footer :: footer"></div>
 
 <div th:replace="fragments/js :: js"></div>
+
+</div>
 </body>
 
 </html>
