--- a/src/main/resources/templates/AuctionView.html
+++ b/src/main/resources/templates/AuctionView.html
@@ -25,7 +25,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- //Font-Awesome-File-Links -->
 
 
-
 </head>
 <script th:inline="javascript">
 // Set the date we're counting down to
@@ -66,27 +65,6 @@ var x = setInterval(function() {
 </script>
 <body>
 <div  th:insert="fragments/menu :: menu"> </div>
-
-<!--<div  th:insert="Header.html"> </div>-->
-
-
-
-<!--<div class="container" th:if="${isOpen}">
-	<h1 style="text-align:center;"><b>Auction Completed</b></h1>
-	<div class="well" id="about" style="padding-top:0px;">
-
-		<p>
-		<h3 style="color:#86bd4d; margin:0%; padding:10px; text-align: center; background-color: #1e1e1e;">Auction Closed At : <b th:text="${winner.winningBidPrice}"></b></h3>
-		<img src="https://www.plexusmd.com/PlexusMDAPI/Images/ProfilePicture/default_profile.jpg" class="img-circle" alt="profile pic" style="float:right;width:130px;height:auto; margin-top:10px "><br />
-
-		</p>
-
-		<h2 style="color:#1e1e1e; font-weight: bolder; text-decoration: underline;" ><b th:text="${winner.auctionWonBy.username}"></b></h2>
-		<h4 style="padding-bottom:50px; color:#1e1e1e " > Total Bids Placed : [[${bidPlaced}]] </h4>
-	</div>
-
-</div>-->
-
 
 
 
@@ -140,21 +118,33 @@ var x = setInterval(function() {
 						<h4 Style="float: left;text-decoration: underline;"><b>Product Discription : </b></h4>
 						<p class="single-price-text" th:text="${auction.description}"></p>
 						<div class="cbp-pgcontent aitssinglew3" id="mens_single">
-							<div th:if="${owner==false}">
-								Enter Bid<input class="form-control" id="bidPrice" type="number"><br><br><br>
-								<button class="btn btn-success agileits my-cart-btn" id="bidBtn" ><i class="fa fa-cart-plus" aria-hidden="true" ></i> Add Bid</button>
+							<!--<div th:if="${owner==false}">
+								Enter Bid<input class="form-control" id="bidPrice1" type="number"><br><br><br>
+								<button class="btn btn-success agileits my-cart-btn" id="bidBtn1" ><i class="fa fa-cart-plus" aria-hidden="true" ></i> Add Bid</button>
 								<div class="clearfix"></div>
-							</div>
+							</div>-->
 
-							<div th:if="${owner==true}" >
-								<form action="" method="post" th:object="bid">
+							<div> <!--th:if="${owner==true}" -->
+								<form action="/actions/add-bid" method="post" th:object="${bid}">
 									<input type="hidden" name="auctionId" th:value="${auction.id}">
-									Enter Bid<input class="form-control" id="bidPrice" type="number" disabled="disabled"><br><br><br>
-									<button  type="submit" class="btn btn-success agileits my-cart-btn" id="bidBtn" disabled="disabled"><i class="fa fa-cart-plus" aria-hidden="true" ></i> Add Bid</button>
+									<label>Enter Bid</label>
+									<input class="form-control" id="bidPrice" type="number" th:field="*{price}"><br><br><br>
+									<button  type="submit" class="btn btn-success agileits my-cart-btn" id="bidBtn"><i class="fa fa-cart-plus" aria-hidden="true" ></i> Add Bid</button>
 									<div class="clearfix"></div>
 								</form>
 
 							</div>
+
+							<!--<div th:if="${owner==false}">
+								Enter Bid<input class="form-control" id="bidPrice" type="number"><br><br><br>
+								<button class="btn btn-success agileits my-cart-btn" id="bidBtn" ><i class="fa fa-cart-plus" aria-hidden="true" ></i> Add Bid</button>
+								<div class="clearfix"></div>
+							</div>
+							<div th:if="${owner==true}" >
+								Enter Bid<input class="form-control" id="bidPrice" type="number" disabled="disabled"><br><br><br>
+								<button class="btn btn-success agileits my-cart-btn" id="bidBtn" disabled="disabled"><i class="fa fa-cart-plus" aria-hidden="true" ></i> Add Bid</button>
+								<div class="clearfix"></div>
+							</div>-->
 
 
 						</div>
